--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,5 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 #shadow {
   box-shadow: 0px -4px 15px 0px rgba(0, 0, 0, 0.15);
+}
+.footer {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+.footer-ttitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 28px;
+  color: white;
+}
+.roud {
+  border-top-left-radius: 31px;
+  border-top-right-radius: 31px;
 }
 .ig {
   background-color: #1c1c1c;
@@ -15,4 +31,7 @@
   background-color: #1c1c1c;
   color: #ffffff;
   font-size: 50px;
+}
+.copyrig {
+  background-color: #212130;
 }
