--- a/src/pages/team/Team.css
+++ b/src/pages/team/Team.css
@@ -1,38 +1,70 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-
 .team-heading {
-    width: 60%;
-    text-align: center;
-    margin-bottom: 20px;
-    font-family: "Intern", sans-serif;
-}  
+  width: 700px;
+  text-align: left;
+  margin-bottom: 10pc;
+  margin-left: 7pc;
+  font-family: "Intern", sans-serif;
+}
 .team-heading h1 {
-    margin-bottom: 5px;
-    font-size: 48px;
-    font-weight: bold;
-    color: #8A3DFF;
-    font-family: "Intern", sans-serif;
-    font-style: italic;
+  margin-bottom: 5px;
+  font-size: 48px;
+  font-weight: bold;
+  color: #181823;
+  font-family: "Intern", sans-serif;
 }
-.team-heading h1 span{
-    color: #181823;
+.team-heading h1 span {
+  color: #8a3dff;
+  font-style: italic;
 }
-.team-heading h3{
-    font-weight: bold;
-    color: #181823;
-    font-family: "Montserrat", sans-serif;
-}  
+.team-heading h3 {
+  font-weight: bold;
+  color: #181823;
+  margin-top: 30px;
+  font-family: "Montserrat", sans-serif;
+}
 .team-heading p {
-    width: 80%;
-    max-width: 600px;
-    padding: 20px;
-    color: #181823;
-  }
-  
-  .team-content p {
-    color: #333;
-    line-height: 1.6;
-  }
-  
+  width: 80%;
+  max-width: 600px;
+  color: #181823;
+}
+.team-content p {
+  color: #333;
+  line-height: 1.6;
+}
+.btcat {
+  color: black !important;
+  border-color: black !important;
+}
+.btcat:hover {
+  background-color: #8a3dff !important;
+  border: none !important;
+  color: white !important;
+}
+.crdart {
+  border-radius: 44px;
+}
+.crdttl {
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 36px;
+  background: var(
+    --Gradient,
+    linear-gradient(101deg, #19c6c2 -5.55%, #8a3dff 49.48%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.txtp {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #000;
+}
