--- a/src/pages/team/Team.css
+++ b/src/pages/team/Team.css
@@ -68,3 +68,12 @@
   line-height: 24px;
   color: #000;
 }
+.mirror {
+  transform: scaleY(-1) !important;
+}
+.btncardt {
+  fill: #141414;
+}
+.btncardt:hover {
+  fill: #8a3dff;
+}
