--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
-  background-color: #eae7e7;
+  background-color: #181823;
 }
 
 @media screen and (max-width: 768px) {
