--- a/src/components/header/navbar.css
+++ b/src/components/header/navbar.css
@@ -6,13 +6,15 @@
   font-weight: 500;
   font-size: 15px;
   padding: 3.5px !important;
-  color: black;
+  color: #eae7e7;
+  border: 0.5px solid var(--Gradient, #32c7c4);
+  background: #212130;
 }
 .menu li > *:not(ul, .menu-title, details, .btn):active,
 .menu li > *:not(ul, .menu-title, details, .btn).active,
 .menu li > details > summary:active {
-  background-color: white !important;
-  color: #e0594c !important;
+  background-color: #212130 !important;
+  color: #f5d364 !important;
 }
 .navlink:hover {
   background-color: white !important;
@@ -20,7 +22,7 @@
 button {
   width: 200px;
   height: 62px;
-  outline: 2px solid black;
+  outline: 0.5px solid #8a3dff;
   outline-offset: 2px;
   border-radius: 9999px;
   justify-content: center;
@@ -29,9 +31,9 @@ button {
   transition: color 0.3s;
 }
 
-button:hover {
+/* button:hover {
   outline: 2px solid #8a3dff;
-}
+} */
 
 @media (max-width: 768px) {
 }
