--- a/src/pages/team/Team.css
+++ b/src/pages/team/Team.css
@@ -47,9 +47,13 @@
   color: #eae7e7 !important;
 }
 .crdart {
-  border-radius: 44px;
-  background-color: #212130;
-  border: 1px solid var(--Gradient);
+  background: #181823;
+  background-image: linear-gradient(90deg, #181823, #181823),
+    linear-gradient(90deg, hsl(179, 60%, 49%), hsl(264, 100%, 62%));
+  background-clip: padding-box, border-box;
+  background-origin: border-box;
+  border: 2px solid transparent;
+  border-radius: 33px;
 }
 .crdttl {
   font-family: "Montserrat", sans-serif;
@@ -68,13 +72,13 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  color: #000;
+  color: white;
 }
 .mirror {
   transform: scaleY(-1) !important;
 }
 .btncardt {
-  fill: #141414;
+  fill: white;
 }
 .btncardt:hover {
   fill: #8a3dff;
