--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -36,13 +36,9 @@
   font-size: 40px;
 }
 .border-gradient {
-  --border-color-start: #19c6c2 10%;
-  --border-color-end: #8a3dff 90%;
-  border-image: linear-gradient(
-      to right,
-      var(--border-color-start),
-      var(--border-color-end)
-    )
-    1;
-  border-radius: 60px;
+  background-image: linear-gradient(90deg, #181823, #181823),
+    linear-gradient(90deg, hsl(179, 60%, 49%), hsl(264, 100%, 62%));
+  background-clip: padding-box, border-box;
+  background-origin: border-box;
+  border: 2px solid transparent;
 }
