--- a/src/components/header/navbar.css
+++ b/src/components/header/navbar.css
@@ -7,8 +7,12 @@
   font-size: 15px;
   padding: 3.5px !important;
   color: #eae7e7;
-  border: 0.5px solid var(--Gradient, #32c7c4);
   background: #212130;
+  background-image: linear-gradient(90deg, #212130, #212130),
+    linear-gradient(90deg, hsl(179, 60%, 49%), hsl(264, 100%, 62%));
+  background-clip: padding-box, border-box;
+  background-origin: border-box;
+  border: 2px solid transparent;
 }
 .menu li > *:not(ul, .menu-title, details, .btn):active,
 .menu li > *:not(ul, .menu-title, details, .btn).active,
