--- a/src/components/header/navbar.css
+++ b/src/components/header/navbar.css
@@ -23,7 +23,7 @@
 .navlink:hover {
   background-color: white !important;
 }
-button {
+.btncont {
   width: 200px;
   height: 62px;
   outline: 0.5px solid #8a3dff;
