--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 .carousel {
   margin: 0 auto;
   width: 100%;
@@ -41,4 +43,18 @@
   background-clip: padding-box, border-box;
   background-origin: border-box;
   border: 2px solid transparent;
+}
+.border-gradient:hover {
+  background-image: linear-gradient(
+    90deg,
+    hsl(179, 60%, 49%),
+    hsl(264, 100%, 62%)
+  );
+  border: none;
+}
+.msbtext {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: white;
+  font-size: 25px;
 }
