--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -11,7 +11,7 @@ body {
   font-size: 36px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
-  color: #fff;
+  color: #EAE7E7;
   text-align: left !important;
 }
 .txtab span {
@@ -30,7 +30,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  color: #fff;
+  color: #EAE7E7;
 }
 .txt-cvr {
   max-width: 1145px;
@@ -41,24 +41,30 @@ body {
 .txt-screen {
   font-family: "Poppins", sans-serif;
   color: #181823;
+  
 }
 .txt-screen1 {
   padding: 50px;
   background-color: #181823;
   border-radius: 44px;
+  background-image: linear-gradient(90deg, #181823, #181823),
+    linear-gradient(90deg, hsl(179, 60%, 49%), hsl(264, 100%, 62%));
+  background-clip: padding-box, border-box;
+  background-origin: border-box;
+  border: 2px solid transparent;
 }
 .txt-screen1 h1 {
   font-size: 36px;
-  color: #fff;
+  color: #EAE7E7;
   font-weight: bold;
 }
 .txt-screen1 h3 {
   font-size: 20px;
-  color: #fff;
+  color: #EAE7E7;
 }
 .txt-screen2 {
   padding: 70px;
-  background-color: #eae7e7;
+  background-color: #EAE7E7;
 }
 .txt-screen2 h1 {
   font-size: 36px;
@@ -70,11 +76,11 @@ body {
   color: #181823;
 }
 .txt-screen2 p {
-  color: #fff;
+  color: #EAE7E7;
 }
 .tabs-bordered {
   font-family: "Poppins", sans-serif;
-  color: #fff;
+  color: #EAE7E7;
   border-radius: 44px;
   background-color: #181823;
   margin-top: -350px;
