--- a/src/pages/news/News.css
+++ b/src/pages/news/News.css
@@ -43,3 +43,10 @@
   flex-shrink: 0;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.bgcard{
+  background-image: linear-gradient(90deg, #181823, #181823),
+    linear-gradient(90deg, hsl(179, 60%, 49%), hsl(264, 100%, 62%));
+  background-clip: padding-box, border-box;
+  background-origin: border-box;
+  border: 2px solid transparent;
+}
