--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -64,19 +64,6 @@ body {
 }
 .txt-screen2 {
   padding: 70px;
-  background-color: #EAE7E7;
-}
-.txt-screen2 h1 {
-  font-size: 36px;
-  color: #181823;
-  font-weight: bold;
-}
-.txt-screen2 h3 {
-  font-size: 20px;
-  color: #181823;
-}
-.txt-screen2 p {
-  color: #EAE7E7;
 }
 .tabs-bordered {
   font-family: "Poppins", sans-serif;
@@ -87,10 +74,9 @@ body {
   margin-left: -30px;
 }
 .tab {
-  color: #8287ae33;
+  color: #fff;
   font-size: 36px;
 }
-
 .position-relative {
   position: relative;
 }
@@ -151,7 +137,6 @@ body {
 .hover-img.active {
   opacity: 1;
 }
-
 @media screen and (max-width: 768px) {
   .responsive-width {
     width: 100%;
@@ -179,4 +164,29 @@ body {
     top: 40%;
     left: 32%;
   }
+}
+.container{
+  width: 209px;
+  height: 209px;
+  padding: 0;
+  background: linear-gradient(to bottom right, #32C7C4 , #8A3DFF);
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center ;
+  border-radius: 33px;
+}
+.h1{
+   font-family: montserrat, sans serif;
+   font-size: 48px;
+   margin:60px ; 
+   font-weight: 700;
+   text-align: center;
+} 
+.h2{
+  font-family: montserrat, sans serif;
+  font-size: 20px;
+  margin: -60px;
+  font-style: normal;
+  text-align: center
 }
