--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -122,7 +122,9 @@
 .crdhmnews {
   margin-top: -27pc;
   border-radius: 33px !important;
-  background-blend-mode: color-dodge, normal;
-  backdrop-filter: blur(25px);
+  background: rgba(255, 255, 255, 0.37);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(16.8px);
+  -webkit-backdrop-filter: blur(16.8px);
   border: none !important;
 }
