--- a/src/pages/msib/Msib.css
+++ b/src/pages/msib/Msib.css
@@ -16,3 +16,10 @@
   -webkit-backdrop-filter: blur(16.8px);
   border: none !important;
 }
+
+.msibtext {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: white;
+  font-size: 20px;
+}
