--- a/src/pages/msib/Msib.css
+++ b/src/pages/msib/Msib.css
@@ -23,3 +23,10 @@
   color: white;
   font-size: 20px;
 }
+
+.msibtxtcont {
+  font-family: "Poppins";
+  font-weight: 400;
+  color: white;
+  font-size: 15px;
+}
