--- a/src/pages/regular/Regular.css
+++ b/src/pages/regular/Regular.css
@@ -46,5 +46,13 @@
     font-size: 18px;
     line-height: normal;
   }
+
+  .profile-card {
+    font-family: "Montserrat";
+    font-weight: 300;
+    color: white;
+    font-size: 16px;
+    line-height: normal;
+  }
   
   
