--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -124,7 +124,25 @@
   border-radius: 33px !important;
   background: rgba(255, 255, 255, 0.37);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(16.8px);
-  -webkit-backdrop-filter: blur(16.8px);
+  backdrop-filter: blur(0);
+  -webkit-backdrop-filter: blur(0);
   border: none !important;
+  animation: blurFade 0.5s ease forwards; /* Tambahkan animasi */
+}
+.card-container {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.card-container.show {
+  opacity: 1;
+}
+@keyframes blurFade {
+  from {
+    backdrop-filter: blur(0);
+    -webkit-backdrop-filter: blur(0);
+  }
+  to {
+    backdrop-filter: blur(16.8px);
+    -webkit-backdrop-filter: blur(16.8px);
+  }
 }
