--- a/src/pages/msib/Msib.css
+++ b/src/pages/msib/Msib.css
@@ -39,11 +39,24 @@
   line-height: normal;
 }
 
-.cardtitle {
+.cardtitlems {
   font-family: "Montserrat";
   font-weight: 600;
   color: white;
-  font-size: 18px;
+  font-size: 16px;
   line-height: normal;
 }
 
+.artboard {
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+.artboard::-webkit-scrollbar {
+  width: 5px;
+}
+
+.artboard::-webkit-scrollbar-thumb {
+  border-radius: 33px;
+  border: 1px solid rgba(217, 217, 217, 0.45);
+  background: rgba(255, 255, 255, 0.37);
+}
