--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -127,7 +127,7 @@
   backdrop-filter: blur(0);
   -webkit-backdrop-filter: blur(0);
   border: none !important;
-  animation: blurFade 0.5s ease forwards; /* Tambahkan animasi */
+  animation: blurFade 0.5s ease forwards;
 }
 .card-container {
   opacity: 0;
