--- a/src/pages/msib/Msib.css
+++ b/src/pages/msib/Msib.css
@@ -60,3 +60,7 @@
   border: 1px solid rgba(217, 217, 217, 0.45);
   background: rgba(255, 255, 255, 0.37);
 }
+.whaoth1 {
+  margin-top: -64pc;
+  margin-left: -13pc;
+}
