--- a/src/components/header/navbar.css
+++ b/src/components/header/navbar.css
@@ -34,6 +34,10 @@
   display: flex;
   transition: color 0.3s;
 }
+.var {
+  z-index: 9999;
+  transition: background-color 0.5s ease;
+}
 
 /* button:hover {
   outline: 2px solid #8a3dff;
