--- a/src/pages/news/News.css
+++ b/src/pages/news/News.css
@@ -19,6 +19,14 @@
   font-style: italic  ;
   font-weight: 700;
   line-height: normal;
+  font-size: 42;
+}
+
+.anaknya{
+  /* font-size: 18; */
+  color: #ffff;
+  text-align: "Left";
+  padding-top: "10px";
 }
 
 .txtafter{
@@ -73,4 +81,42 @@ font-style: normal;
 font-weight: 400;
 line-height: 24px; /* 150% */
 left: auto;
+}
+
+.card-m{
+color: var(--Mirage-400, #8287AE);
+font-family: Poppins;
+font-size: 8px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; /* 150% */
+letter-spacing: 3.2px;
+}
+
+.card-mm{
+color: var(--white, #FFF);
+font-family: Poppins;
+font-size: 30px;
+font-style: normal;
+font-weight: 600;
+line-height: 50px; /* 166.667% */
+letter-spacing: 0.3px;
+}
+
+.title-card{
+  color: var(--white, #FFF);
+  font-family: Poppins;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 50px; /* 125% */
+  letter-spacing: 0.4px;
+}
+
+.title-cardm{
+  color: var(--white, #FFF);
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
 }
