--- a/src/pages/career/Career.css
+++ b/src/pages/career/Career.css
@@ -18,3 +18,30 @@
 .sectt {
   margin-left: 40px;
 }
+.hmodal{
+color: #FFF;
+font-family: "SF Pro";
+font-size: 32px;
+font-style: normal;
+font-weight: 590;
+line-height: 36px; /* 112.5% */
+}
+
+.tmodal{
+color: #FFF;
+font-family: Poppins;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: 28px; /* 116.667% */
+}
+
+.desc{
+  color: #FFF;
+text-align: justify;
+font-family: Poppins;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; /* 140% */
+}
